エージェント系をantigravity 標準に準拠

--- a/.agent/workflows/000.md
+++ b/.agent/workflows/000.md
@@ -1,3 +1,7 @@
+---
+description: 普遍的な知見のルール化
+---
+
 # [Fix-000] 普遍的な知見のルール化（Add Common Fix）
 
 ## 概要
@@ -10,7 +14,7 @@
 
 発見した知見を、他のエージェントや開発者が再現可能な形式で Markdown ファイルにまとめます。
 
-- **ファイル作成**: `.agent/common_fixes/fix-00X.md` （連番）を作成
+- **ファイル作成**: `.agent/workflows/fix-00X.md` （連番）を作成
 - **内容の記述**:
   - **概要・課題**: なぜこの知見が必要なのか
   - **Bad/Good Example**: 具体的なコード例
