プロンプトを改善

--- a/.agent/workflows/000.md
+++ b/.agent/workflows/000.md
@@ -15,6 +15,8 @@ description: 普遍的な知見のルール化
 発見した知見を、他のエージェントや開発者が再現可能な形式で Markdown ファイルにまとめます。
 
 - **ファイル作成**: `.agent/workflows/fix-00X.md` （連番）を作成
+ - すでに似た内容のものがないか確認します
+ - もしある場合はそれの修正を行うか確認を取ります
 - **内容の記述**:
   - **概要・課題**: なぜこの知見が必要なのか
   - **Bad/Good Example**: 具体的なコード例
@@ -30,6 +32,9 @@ description: 普遍的な知見のルール化
   ```markdown
   - **[Fix-00X] タイトル**: 概要を簡潔に。 (`.agent/common_fixes/fix-00X.md`)
   ```
+
+もし既存の知見を修正する形をとったなら、既存のその知見についての概要を修正してください
+
 
 ### 3. グローバルルールへの反映（オプション）
 
