docs: /0原則に基づき props_flow.md 刷新と不適切なグループ化を解消 - 直接の親子間は個別渡しにする原則を徹底 - LayerStatusPanel へのグループ適用を差し戻し個別プロップス化 - Workflow-006 に適用判断(Workflow-005)の確認手順を追加 - props_flow.md を論理パス別の3部構成に再構築

--- a/.agent/workflows/006.md
+++ b/.agent/workflows/006.md
@@ -8,6 +8,10 @@ description: スプレッド分割代入後の型定義の再配置
 
 [Workflow-002](./002.md)（スプレッド演算子による分割代入でのグループ化）を適用した後、親コンポーネントで定義されていた「グループ型」が親自身では使用されなくなることがあります。この場合、型定義を適切な子コンポーネント（そのドメインのハブとなるコンポーネント）へ移動し、コードのクリーンさとトレーサビリティを維持します。
 
+> [!IMPORTANT]
+> このワークフローを適用する前に、必ず **[Workflow-005](./005.md)（Props Grouping の適用判断）** を確認してください。
+> **直接の親子かつ末端コンポーネント**（中間を経由しない）に対してこのワークフローを適用してはいけません。その場合は、グループ化自体を不採用とし、個別 Props に戻すべきです。
+
 ## 課題
 
 スプレッド分割代入を適用すると、親コンポーネント内での型注釈（例: `const layerActions: LayerActions = { ... }`）が不要になります。しかし、その型は依然として子コンポーネントの Props 定義（`interface ChildProps { layerActions: LayerActions }`）で必要とされています。
