chore: コミットメッセージ規約の明確化
- 禁止事項に「作業の経過」を含めることを明記

- 最終成果物に含まれない試行錯誤の記述を防ぐため

--- a/.agent/workflows/003.md
+++ b/.agent/workflows/003.md
@@ -18,7 +18,10 @@ description: 適切なコミット粒度とメッセージの規約
     - ドキュメント修正とコード修正は（可能なら）分ける。
 3.  **メッセージの規約**:
     - **含めるべきもの**: 「何を変更したか (What)」「なぜ変更したか (Why)」。
-    - **含めてはいけないもの**: 「どうやって考えたか (Process)」「苦労話」。
+    - **含めてはいけないもの**:
+      - 「どうやって考えたか (Process)」
+      - 「苦労話」
+      - **「作業の経過」**: （例：「A を B に統合」「試行錯誤の結果」など、最終的な成果物に含まれない文脈）
     - **形式**: 1 行目に概要、空行を挟んで詳細を書く。
 
 ## 手順 (Workflow)
@@ -45,6 +48,8 @@ git diff --staged --stat
 ```
 
 ### 4. コミット
+
+コミットを行う前にコミットメッセージをマークダウン形式でこれでよいか確認してください
 
 ```bash
 git commit -m "type: 概要" -m "詳細な説明（箇条書き推奨）"
