docs(workflow): 004の手順書の記述ミスを修正
- 'Late Destructuring' となっていた箇所を 'Inline Destructuring' に訂正

--- a/.agent/workflows/004.md
+++ b/.agent/workflows/004.md
@@ -1,17 +1,17 @@
 ---
-description: Leaf コンポーネントでの Props 分割代入 (Late Destructuring)
+description: Props 分割代入 (Inline Destructuring)
 ---
 
-# [Fix-004] Leaf コンポーネントでの Props 分割代入 (Late Destructuring)
+# [Fix-004] Props 分割代入 (Inline Destructuring)
 
 ## 概要
 
-Props Grouping (Late Destructuring) ルールの適用漏れを修正する。
-Leaf コンポーネント（末端）において、グループ化された Props オブジェクトを引数で直接受け取り、コンポーネント定義の冒頭で分割代入を行う形式にリファクタリングする。
+Props Grouping ルールの適用漏れを修正する。
+グループ化された Props オブジェクトを使用するコンポーネントにおいて、**引数内で直接分割代入** する形式にリファクタリングする。
 
 ## 目的
 
-- **可読性向上**: コンポーネントが具体的にどのデータや関数（アクション）に依存しているかを、定義の冒頭で一目で把握できるようにする。
+- **可読性向上**: コンポーネントが具体的にどのデータや関数（アクション）に依存しているかを、定義の冒頭（引数定義）で一目で把握できるようにする。
 - **依存関係の明示**: `props.group.action` のような深いネストでの使用を避け、使用する要素を明確にする。
 
 ## 適用条件
@@ -19,14 +19,15 @@ Leaf コンポーネント（末端）において、グループ化された Pr
 以下の条件を満たすコンポーネントに適用する:
 
 1.  親からグループ化された Props (例: `layerActions`, `keyState` など) を受け取っている。
-2.  その Props をさらに子コンポーネントにパススルー**していない**（Leaf コンポーネントである）。
-3.  現在、実装内で `props.group.value` や `group.value` のようにドット記法でアクセスしている。
+2.  その Props の中身を使用（参照）している。
+3.  現在、実装内で `props.group.value` や `group.value` のようにドット記法でアクセスしている、または関数ボディ内で `const {} = group` している（Late Destructuring）。
 
 ## 手順
 
 1.  **コンポーネント定義の引数を変更**:
 
-    - Props オブジェクトを受け取る箇所で、対象のグループ化された Prop を分割代入の形に書き換える。
+    - Props オブジェクトを受け取る箇所で、対象のグループ化された Prop を **引数内で** 分割代入する。
+    - **ルール**: 末端かどうかにかかわらず、特に理由がない限り、引数内で分割代入を行う。
     - _Before_: `function Component({ group }: Props)`
     - _After_: `function Component({ group: { val1, func1 } }: Props)`
 
@@ -43,17 +44,17 @@ Leaf コンポーネント（末端）において、グループ化された Pr
 ### Before
 
 ```tsx
-function MousePositionInput({ mouseHandlers }: Props) {
+function Component({ mouseHandlers }: Props) {
   return (
     <button onClick={mouseHandlers.onGetPosition}>{mouseHandlers.x}</button>
   );
 }
 ```
 
-### After
+### After (Inline Destructuring)
 
 ```tsx
-function MousePositionInput({ mouseHandlers: { onGetPosition, x } }: Props) {
+function Component({ mouseHandlers: { onGetPosition, x } }: Props) {
   return <button onClick={onGetPosition}>{x}</button>;
 }
 ```
