docs(workflow): 003のコミット手順を拡充
- 複数行メッセージには複数の -m オプションを使用するよう明記

- 改行コード埋め込みに関する注意書きを追加

--- a/.agent/workflows/003.md
+++ b/.agent/workflows/003.md
@@ -52,8 +52,12 @@ git diff --staged --stat
 コミットを行う前にコミットメッセージをマークダウン形式でこれでよいか確認してください
 
 ```bash
-git commit -m "type: 概要" -m "詳細な説明（箇条書き推奨）"
+# 1行目: 概要 (-m)
+# 2行目以降: 詳細 (-m を追加して改行扱いにする)
+git commit -m "type: 概要" -m "- 詳細な説明1" -m "- 詳細な説明2"
 ```
+
+> [!NOTE] > `\n` などの改行コードを埋め込む方法は環境によって動作しない場合があるため、複数の `-m` オプションを使用することを推奨します。
 
 ## トラブルシューティング
 
