docs: ワークフローの更新
- コミット規約(Fix-003)を単一-mでの改行推奨に変更

--- a/.agent/workflows/003.md
+++ b/.agent/workflows/003.md
@@ -52,12 +52,16 @@ git diff --staged --stat
 コミットを行う前にコミットメッセージをマークダウン形式でこれでよいか確認してください
 
 ```bash
-# 1行目: 概要 (-m)
-# 2行目以降: 詳細 (-m を追加して改行扱いにする)
-git commit -m "type: 概要" -m "- 詳細な説明1" -m "- 詳細な説明2"
+# 1行目: 概要
+# (空行)
+# 3行目以降: 詳細
+git commit -m "type: 概要
+
+- 詳細な説明1
+- 詳細な説明2"
 ```
 
-> [!NOTE] > `\n` などの改行コードを埋め込む方法は環境によって動作しない場合があるため、複数の `-m` オプションを使用することを推奨します。
+> [!NOTE] > ターミナルでの改行が可能な場合、1 つの `-m` で記述することを推奨します。環境により困難な場合は複数の `-m` を使用してください。
 
 ## トラブルシューティング
 
