feat: Active Keys UIの改善と品質管理ルールの適用
- Active Keys (Held) セクションをアコーディオンに格納し、デフォルトで非表示に変更

- アコーディオンが開いているときのみキー入力を受け付けるように制御を追加

- アクション実行ロジックの複雑度低減 (Cognitive Complexity対策)

- GEMINI.mdに実装完了前の品質チェック（typecheck, lint, build）ルールを追加

- [Workflow-003] に「セッション外の変更をステージングしない」ルールを追加

--- a/.agent/workflows/003.md
+++ b/.agent/workflows/003.md
@@ -16,7 +16,8 @@ description: 適切なコミット粒度とメッセージの規約
 2.  **コミットの粒度**: 「1 つのコミット＝ 1 つの論理的な変更」とする。
     - リファクタリングと機能追加は分ける。
     - ドキュメント修正とコード修正は（可能なら）分ける。
-3.  **メッセージの規約**:
+3.  **セッション外変更の除外**: 開発中、現在のタスクや会話とは無関係な変更（別の実験や並行タスクでの修正など）がファイルに含まれている場合がある。これらを混入させないよう、`git add -p` やファイル単位での指定を使い、現在の会話で行った変更のみをステージングする。
+4.  **メッセージの規約**:
     - **含めるべきもの**: 「何を変更したか (What)」「なぜ変更したか (Why)」。
     - **含めてはいけないもの**:
       - 「どうやって考えたか (Process)」
