docs: 知見の継続的改善ルールと影響範囲管理プロセスの導入
- GEMINI.md: 運用ルール「知見の継続的改善」「影響範囲管理」を追加
- Workflow-000: 新規知見作成時に継続的改善セクションの設置を必須化
- Workflow-011: 回帰バグ調査フローに人為的ミスチェックと知見化プロセスを追加
- All Workflows: 末尾に「知見の継続的改善」セクションを一律追加し、改善サイクルを明文化

--- a/.agent/workflows/000.md
+++ b/.agent/workflows/000.md
@@ -15,12 +15,17 @@ description: 普遍的な知見のルール化
 発見した知見を、他のエージェントや開発者が再現可能な形式で Markdown ファイルにまとめます。
 
 - **ファイル作成**: `.agent/workflows/fix-00X.md` （連番）を作成
- - すでに似た内容のものがないか確認します
- - もしある場合はそれの修正を行うか確認を取ります
+- すでに似た内容のものがないか確認します
+- もしある場合はそれの修正を行うか確認を取ります
 - **内容の記述**:
   - **概要・課題**: なぜこの知見が必要なのか
   - **Bad/Good Example**: 具体的なコード例
   - **Step-by-Step**: 具体的な適用手順
+    - 「基本的には分かっているだろう」という暗黙の前提を排除する。
+    - 勘違いが起こりうるポイントを先回りして明示する。
+    - ※ "Explicitly stating it ensures certainty"（明示することで確実にする）のマインドで記述すること。
+  - **知見の継続的改善 (Mandatory)**:
+    - 全てのワークフローの末尾に「このドキュメント自体を改善し続けること」を明記したセクションを追加する。
   - **チェックリスト**: 完了条件
 
 ### 2. ルールファイルへの登録
@@ -35,7 +40,6 @@ description: 普遍的な知見のルール化
 
 もし既存の知見を修正する形をとったなら、既存のその知見についての概要を修正してください
 
-
 ### 3. グローバルルールへの反映（オプション）
 
 もしその知見がプロジェクト固有ではなく、私の開発環境全体に適用すべき普遍的なルール（例：好みのコーディングスタイルなど）であれば、グローバルルールの更新を提案してください。
@@ -46,3 +50,7 @@ description: 普遍的な知見のルール化
 - [ ] 手順書には「概要」「Bad/Good」「手順」「チェックリスト」が含まれているか？
 - [ ] `GEMINI.md` のリストに項目を追加したか？
 - [ ] （必要であれば）現在作業中のコードにその知見を適用したか？
+
+## 知見の継続的改善 (Continuous Knowledge Improvement)
+
+このワークフローを使用する中で、新しい指示や改善点が見つかった場合は、必ずこのファイル (`.agent/workflows/000.md`) を更新・改善することを提案してください。
