--- a/.agent/workflows/001.md
+++ b/.agent/workflows/001.md
@@ -94,3 +94,7 @@ export function Child({ actions }: ChildProps) { ... }
 - [ ] 型定義は `export` されているか？
 - [ ] 外部フック由来の場合、`Pick<ReturnType<...>>` などを使って同期されているか？
 - [ ] 子コンポーネントは親から型を `import` しているか？
+
+## 知見の継続的改善 (Continuous Knowledge Improvement)
+
+このワークフローを使用する中で、新しい指示や改善点が見つかった場合は、必ずこのファイル (`.agent/workflows/001.md`) を更新・改善することを提案してください。
