--- a/.agent/workflows/002.md
+++ b/.agent/workflows/002.md
@@ -265,3 +265,7 @@ const { isActive, ...remapActions }: { isActive: boolean } & RemapActions =
 ```
 
 ただし、通常は型推論で十分なため、明示的な型指定は不要です。
+
+## 知見の継続的改善 (Continuous Knowledge Improvement)
+
+このワークフローを使用する中で、新しい指示や改善点が見つかった場合は、必ずこのファイル (`.agent/workflows/002.md`) を更新・改善することを提案してください。
