--- a/.agent/workflows/003.md
+++ b/.agent/workflows/003.md
@@ -23,6 +23,7 @@ description: 適切なコミット粒度とメッセージの規約
       - 「どうやって考えたか (Process)」
       - 「苦労話」
       - **「作業の経過」**: （例：「A を B に統合」「試行錯誤の結果」など、最終的な成果物に含まれない文脈）
+      - **「変更したファイルパスのリスト」**: ファイル名は `git log --name-status` 等で確認できるため、メッセージ本体には含めない。
     - **形式**: 1 行目に概要、空行を挟んで詳細を書く。
 
 ## 手順 (Workflow)
@@ -80,3 +81,7 @@ git reset --soft HEAD~1
 # 直前のコミットを取り消し、変更をステージング状態に戻す
 # その後、正しいファイルだけ add し直してコミットする
 ```
+
+## 知見の継続的改善 (Continuous Knowledge Improvement)
+
+このワークフローを使用する中で、新しい指示や改善点が見つかった場合は、必ずこのファイル (`.agent/workflows/003.md`) を更新・改善することを提案してください。
