--- a/.agent/workflows/004.md
+++ b/.agent/workflows/004.md
@@ -58,3 +58,7 @@ function Component({ mouseHandlers: { onGetPosition, x } }: Props) {
   return <button onClick={onGetPosition}>{x}</button>;
 }
 ```
+
+## 知見の継続的改善 (Continuous Knowledge Improvement)
+
+このワークフローを使用する中で、新しい指示や改善点が見つかった場合は、必ずこのファイル (`.agent/workflows/004.md`) を更新・改善することを提案してください。
