--- a/.agent/workflows/006.md
+++ b/.agent/workflows/006.md
@@ -73,3 +73,7 @@ interface SidePanelProps {
 - [ ] すべての子・兄弟コンポーネントのインポート元を修正したか？
 - [ ] 親コンポーネントの不要な型定義/インポートを削除したか？
 - [ ] `npm run build` で型エラーが発生しないことを確認したか？
+
+## 知見の継続的改善 (Continuous Knowledge Improvement)
+
+このワークフローを使用する中で、新しい指示や改善点が見つかった場合は、必ずこのファイル (`.agent/workflows/006.md`) を更新・改善することを提案してください。
