--- a/.agent/workflows/007.md
+++ b/.agent/workflows/007.md
@@ -76,3 +76,7 @@ export interface MappingActions {
 - [ ] 呼び出し側で `onSave={fn(id)}` のような簡潔な記述になっているか？
 - [ ] 型定義が `UseLayerStateReturn` などのソースと同期されているか？
 - [ ] `npm run build` で型エラーが発生しないか？
+
+## 知見の継続的改善 (Continuous Knowledge Improvement)
+
+このワークフローを使用する中で、新しい指示や改善点が見つかった場合は、必ずこのファイル (`.agent/workflows/007.md`) を更新・改善することを提案してください。
