--- a/.agent/workflows/010.md
+++ b/.agent/workflows/010.md
@@ -61,3 +61,7 @@ description: 大規模機能の実装計画策定ガイドライン
 - [ ] **「実際にどう動くか」が目に浮かぶか？**: UI の挙動やデータフローが具体的にイメージできるか？
 - [ ] **コード断片は適切か？**: 主要な型定義や関数シグネチャが含まれているか？
 - [ ] **将来の拡張に耐えうるか？**: データの正規化や責務の分離は適切に行われているか？
+
+## 知見の継続的改善 (Continuous Knowledge Improvement)
+
+このワークフローを使用する中で、新しい指示や改善点が見つかった場合は、必ずこのファイル (`.agent/workflows/010.md`) を更新・改善することを提案してください。
