--- a/.agent/workflows/005.md
+++ b/.agent/workflows/005.md
@@ -158,3 +158,7 @@ Parent → A → B → C (多段経由)
 
 - `.agent/GEMINI.md` の「設計思想 (Architecture Decisions)」セクション
 - `props_flow.md` の Props 伝播マトリクス
+
+## 知見の継続的改善 (Continuous Knowledge Improvement)
+
+このワークフローを使用する中で、新しい指示や改善点が見つかった場合は、必ずこのファイル (`.agent/workflows/005.md`) を更新・改善することを提案してください。
