feat: 大規模機能の実装計画策定ガイドラインに完全性と自己完結性の要素を追加

--- a/.agent/workflows/010.md
+++ b/.agent/workflows/010.md
@@ -13,6 +13,13 @@ description: 大規模機能の実装計画策定ガイドライン
 
 実装計画書 (`implementation_plan.md`) には、必ず以下の要素を含めてください。
 
+### 0. 完全性・自己完結性 (Completeness & Context) [重要]
+
+修正や追記を行う際、**既存の記述を「(中略)」などで省略してはいけません。**
+
+- **No Abbreviations**: 計画書は常に完全な状態（Full Version）を維持してください。過去のチャット履歴やドキュメントの更新履歴を遡らなくても、そのファイル単体ですべての仕様が把握できるようにします。
+- **Single Source of Truth**: コードスニペットや仕様が重複しても構いません。計画書が常に最新かつ完全な仕様書であることを保証してください。
+
 ### 1. 具体的コードスニペット (Concrete Code Snippets)
 
 自然言語の説明だけでなく、実際のコードの断片を必ず含めてください。
@@ -29,6 +36,7 @@ description: 大規模機能の実装計画策定ガイドライン
 - **状態定義**: Loading, Error, Empty などのエッジケース。
 - **インタラクション**: ドラッグ＆ドロップ、ショートカットキー、バリデーションの挙動。
 - **ライブラリ選定**: 使用する既存ライブラリやコンポーネントの明記。
+- **ワイヤーフレーム**: ASCII アートや Mermaid 図を用いて、画面レイアウトを可視化する。
 
 ### 3. アーキテクチャと関心の分離 (Architecture & Separation)
 
@@ -57,6 +65,7 @@ description: 大規模機能の実装計画策定ガイドライン
 
 計画をユーザーに提示する前に、以下の質問に答えてください。
 
+- [ ] **省略はないか？**: 「(中略)」や「以前の通り」といった記述がなく、ドキュメント単体で完結しているか？
 - [ ] **その計画書だけで実装可能か？**: 計画書を見ながら、迷わずコードを書けるレベルになっているか？
 - [ ] **「実際にどう動くか」が目に浮かぶか？**: UI の挙動やデータフローが具体的にイメージできるか？
 - [ ] **コード断片は適切か？**: 主要な型定義や関数シグネチャが含まれているか？
