feat: 実装計画における「図の活用」ガイドラインの追加
- テキストだけでは伝わりにくい複雑なロジックや依存関係を可視化するための「Visualizing Complexity with Mermaid」セクションを追加

- Micro（ロジック・時間）と Macro（構造・データ）、Interaction（相互作用）の3つの視点を定義し、適切な図の推奨例を明記

--- a/.agent/workflows/010.md
+++ b/.agent/workflows/010.md
@@ -30,6 +30,7 @@ description: 大規模機能の実装計画策定ガイドライン
 
 ### 2. 詳細な UI/UX 設計 (UX/UI Specification)
 
+図
 「画面を作る」という記述だけでなく、具体的なインタラクションと構成を定義します。
 
 - **画面遷移**: モーダル、ドリルダウン、タブ切り替えなどの構造。
@@ -37,6 +38,48 @@ description: 大規模機能の実装計画策定ガイドライン
 - **インタラクション**: ドラッグ＆ドロップ、ショートカットキー、バリデーションの挙動。
 - **ライブラリ選定**: 使用する既存ライブラリやコンポーネントの明記。
 - **ワイヤーフレーム**: ASCII アートや Mermaid 図を用いて、画面レイアウトを可視化する。
+
+### 2.5. 複雑性の可視化 (Visualizing Complexity with Mermaid)
+
+テキストやコードスニペットだけでは伝わりにくい複雑なロジックや依存関係は、**Mermaid 図**を用いて可視化してください。
+目的に応じて、以下の「Micro（ロジック）」と「Macro（構造）」の視点を使い分け、あるいは組み合わせます。
+
+#### A. ロジックと時間の流れ (Micro View)
+
+**目的**: 複雑な条件分岐、非同期処理、ユーザー操作に対する一連の反応を整理する。
+
+- **状態遷移図 / フローチャート (Flowchart / State Diagram)**
+  - `flowchart TD` または `stateDiagram-v2` を使用。
+  - **使用例**:
+    - キー入力の判定ロジック（Tap vs Hold）。
+    - タイマーやイベントリスナーの開始・終了フロー。
+    - API 通信の状態変化（Idle -> Loading -> Success/Error）。
+
+#### B. 構造とデータの流れ (Macro View)
+
+**目的**: コンポーネントの配置、データの所有権、依存関係を整理する。
+
+- **構造・依存関係図 (Structure / Dependency Graph)**
+  - `flowchart TB` または `classDiagram` を使用。
+  - **使用例**:
+    - 新しいフックやコンポーネントが既存システムのどこに配置されるか。
+    - 親子コンポーネント間の Props フローや、カスタムフックの所有関係。
+    - グローバルイベント（Window）とコンポーネントの接点。
+
+#### C. 相互作用 (Interaction View)
+
+**目的**: 複数のレイヤー（UI, Logic, Main Process）にまたがる処理フローを時系列で追う。
+
+- **シーケンス図 (Sequence Diagram)**
+  - `sequenceDiagram` を使用。
+  - **使用例**:
+    - IPC 通信（Renderer <-> Main）の往復。
+    - ユーザーアクションから DB 保存までのフルスタックな流れ。
+
+**メリット**:
+
+- **レビュー効率向上**: テキストを読み解く負荷を下げ、構造を一目で共有できる。
+- **自己検閲**:「この矢印はどこにも繋がっていない」といった論理的欠陥（"Bad" Pattern）に実装前で気づける。
 
 ### 3. アーキテクチャと関心の分離 (Architecture & Separation)
 
