docs: Workflow-010にASCIIアートの推奨ルールを追加
- Mermaidでのレイアウト制御が困難な場合の代替案として、ASCIIアートの使用を明文化

- 複雑性の可視化セクションを更新

--- a/.agent/workflows/010.md
+++ b/.agent/workflows/010.md
@@ -39,9 +39,11 @@ description: 大規模機能の実装計画策定ガイドライン
 - **ライブラリ選定**: 使用する既存ライブラリやコンポーネントの明記。
 - **ワイヤーフレーム**: ASCII アートや Mermaid 図を用いて、画面レイアウトを可視化する。
 
-### 2.5. 複雑性の可視化 (Visualizing Complexity with Mermaid)
+### 2.5. 複雑性の可視化 (Visualizing Complexity with Mermaid & ASCII)
 
-テキストやコードスニペットだけでは伝わりにくい複雑なロジックや依存関係は、**Mermaid 図**を用いて可視化してください。
+テキストやコードスニペットだけでは伝わりにくい複雑なロジックや依存関係は、図を用いて可視化してください。
+基本的には **Mermaid** を使用しますが、**Mermaid のレイアウト制御が難しい場合（わかりやすくするために特定の並び順の強制、コンパクト化、パースエラーの回避など）は、迷わず ASCII アート（テキスト図）を使用してください。** ASCII アートはレイアウトの自由度が最も高く、意図した配置を確実に表現できます。
+
 目的に応じて、以下の「Micro（ロジック）」と「Macro（構造）」の視点を使い分け、あるいは組み合わせます。
 
 #### A. ロジックと時間の流れ (Micro View)
