docs: add Workflow-012 for architectural visualization guidelines
- アーキテクチャ図解のベストプラクティス（Mermaid）を定義する Workflow-012 を新規作成

- Workflow-010 に図解ガイドラインへの参照を追加

--- a/.agent/workflows/010.md
+++ b/.agent/workflows/010.md
@@ -44,6 +44,9 @@ description: 大規模機能の実装計画策定ガイドライン
 テキストやコードスニペットだけでは伝わりにくい複雑なロジックや依存関係は、図を用いて可視化してください。
 基本的には **Mermaid** を使用しますが、**Mermaid のレイアウト制御が難しい場合（わかりやすくするために特定の並び順の強制、コンパクト化、パースエラーの回避など）は、迷わず ASCII アート（テキスト図）を使用してください。** ASCII アートはレイアウトの自由度が最も高く、意図した配置を確実に表現できます。
 
+> [!TIP] > **アーキテクチャ図解のベストプラクティス**
+> Mermaid 図を作成する際は、可読性と正確性を高めるための詳細なガイドライン `[Workflow-012] Effective Architectural Visualization` (.agent/workflows/012.md) を参照してください。（脱クラス図、ダークモード対応など）
+
 目的に応じて、以下の「Micro（ロジック）」と「Macro（構造）」の視点を使い分け、あるいは組み合わせます。
 
 #### A. ロジックと時間の流れ (Micro View)
