docs: 日本語出力徹底のための Workflow-013 を追加

--- a/.agent/workflows/000.md
+++ b/.agent/workflows/000.md
@@ -40,9 +40,15 @@ description: 普遍的な知見のルール化
 
 もし既存の知見を修正する形をとったなら、既存のその知見についての概要を修正してください
 
-### 3. グローバルルールへの反映（オプション）
+### 3. グローバルルールへの反映
 
-もしその知見がプロジェクト固有ではなく、私の開発環境全体に適用すべき普遍的なルール（例：好みのコーディングスタイルなど）であれば、グローバルルールの更新を提案してください。
+作成した知見をグローバルルールとしてエージェントに適用します。
+
+### 4. コミット (Commit)
+
+作成したドキュメントとルールの変更をコミットします。
+コミットメッセージのプレフィックスは `docs:` とし、知見の追加であることが分かるように **日本語で** 記述してください。
+例: `docs: [タイトル]のためのWorkflow-0XXを追加`
 
 ## チェックリスト
 
@@ -50,6 +56,7 @@ description: 普遍的な知見のルール化
 - [ ] 手順書には「概要」「Bad/Good」「手順」「チェックリスト」が含まれているか？
 - [ ] `GEMINI.md` のリストに項目を追加したか？
 - [ ] （必要であれば）現在作業中のコードにその知見を適用したか？
+- [ ] **変更内容（ドキュメント・ルール）をコミットしたか？**
 
 ## 知見の継続的改善 (Continuous Knowledge Improvement)
 
