docs: コミット運用ルール(Workflow-003)に実行環境の注意点を追加

--- a/.agent/workflows/003.md
+++ b/.agent/workflows/003.md
@@ -2,11 +2,21 @@
 description: 適切なコミット粒度とメッセージの規約
 ---
 
-# [Fix-003] 適切なコミット粒度とメッセージの規約
+# [Fix-003] 適切なコミット運用と実行トラブルシューティング
 
 ## 概要
 
-コードベースの健全な履歴管理のため、コミットは論理的な変更単位で行い、一括ステージング（`git add .`）を避ける運用を徹底するためのルールです。
+コードベースの健全な履歴管理のため、コミットは論理的な変更単位で行い、環境依存のトラブルを避けるための安全な実行手順を定義します。
+
+## 実行時の注意点 (Execution Guidelines)
+
+**特に Windows (PowerShell) 環境におけるコマンド実行の安定性を重視します。**
+
+1.  **コマンドチェーンの禁止**: `&&` 演算子は環境（PowerShell のバージョン等）によって動作しない場合があるため、使用してはいけません。
+    - **NG**: `git add . && git commit -m "..."`
+    - **OK**: `git add .` を実行し、次に `git commit -m "..."` を別のアクションとして実行する。
+2.  **コマンドの分離**: `git add` と `git commit` は常に別々の `run_command` ツール呼び出しとして実行してください。これにより、`add` 失敗時に誤って空のコミットを試みるなどの事故を防げます。
+3.  **状態確認の徹底**: コミット失敗時や、一連の作業後は必ず `git status` を実行し、ステージングの状態を確認してください。
 
 ## 原則
 
