docs: Workflow-023(ドラフト手順)と024(意図補完)を追加し、Workflow-000にドラフト必須化を反映

--- a/.agent/workflows/000.md
+++ b/.agent/workflows/000.md
@@ -14,8 +14,9 @@ description: 普遍的な知見のルール化
 
 発見した知見を、他のエージェントや開発者が再現可能な形式で Markdown ファイルにまとめます。
 
-- **ファイル作成**: `.agent/workflows/fix-00X.md` （連番）を作成
-- すでに似た内容のものがないか確認します
+- **ドラフト作成 (必須)**: ドキュメント作成には **[Workflow-023] レビュー用ドラフト作成・編集** を使用してください。
+  - 直接 `.agent/workflows/` に作成せず、まず `_drafts/` で作成・ステージング・レビューを行います。
+- **ファイル作成**: `.agent/workflows/fix-00X.md` （連番）を想定（実際はドラフト経由）
 - もしある場合はそれの修正を行うか確認を取ります
 - **内容の記述**:
   - **概要・課題**: なぜこの知見が必要なのか
