Workflow-026(Data/Config Split)と027(Objective Switch)を追加

--- a/.agent/workflows/013.md
+++ b/.agent/workflows/013.md
@@ -6,7 +6,7 @@ description: AI応答の日本語化徹底チェックリスト
 
 ## 概要
 
-AI アシスタント（私）がユーザーに対して出力するメッセージ（チャット応答、Tool Call の引数、ログ、コミットメッセージなど）において、英語が混入することを防ぎ、**「完全な日本語対応」** という最上位ルールを遵守するための自己点検手順です。
+AI アシスタント（私）がユーザーに対して出力するメッセージ（チャット応答、Tool Call の引数、ログ、コミットメッセージなど）において、英語が混入することを防ぎ、**「完全な日本語対応」** という最上位ルールを遵守するための自己点検手順です。このワークフローが呼ばれたら以降そのセッションにおいてこのルールを守ってください。
 
 ## Bad / Good Example
 
