ワークフローを修正

--- a/.agent/workflows/000.md
+++ b/.agent/workflows/000.md
@@ -31,9 +31,9 @@ description: 普遍的な知見のルール化
 
 ### 2. ルールファイルへの登録
 
-作成したドキュメントへのリンクを `GEMINI.md` の「よくある修正リスト (Common Fixes)」セクションに追加します。
+作成したドキュメントへのリンクを `RULE.md` の「よくある修正リスト (Common Fixes)」セクションに追加します。
 
-- **ファイル**: `.agent/GEMINI.md`
+- **ファイル**: `.agent/RULE.md`
 - **追加内容**:
   ```markdown
   - **[Fix-00X] タイトル**: 概要を簡潔に。 (`.agent/common_fixes/fix-00X.md`)
