--- a/.agent/workflows/024.md
+++ b/.agent/workflows/024.md
@@ -18,8 +18,7 @@ description: 意図の補完と具体化 (Complete the Thought)
 
 ### 1. 受信 (Input)
 
-- ユーザーから、短く抽象的、あるいは断片的な指示（Core Idea）を受け取ります。
-  - 例: 「編集時は差分見たいから git add してからやって」
+- このワークフローを使用するようにという指示とともに送られてきたメッセージについて考えます
 
 ### 2. 派生と補完 (Extrapolate)
 
