docs(agent): Workflow-023 を改訂し既存編集時の Diff 視認性向上手順を追加 - 既存ファイルコピー直後の git add によるベースライン固定手順を追加 - ファイル命名規則（数字三桁）への準拠と記載の修正 - レビュー依頼時の render_diffs 活用の推奨を追加

--- a/.agent/workflows/023.md
+++ b/.agent/workflows/023.md
@@ -1,54 +1,63 @@
 ---
-description: レビュー用ドラフト作成
+description: .agent/ 配下のファイル（規約・ワークフロー）編集時のドラフト運用
 ---
 
-# [Workflow-023] レビュー用ドラフト作成 (Review-Friendly Document Creation)
+# [Workflow-023] 規約・ワークフロー編集時のドラフト運用 (Draft Usage for Rules and Workflows)
 
 ## 概要
 
-`.agent/workflows` などの特殊ディレクトリや、エディタの挙動により直接レビューが困難な場所にドキュメントを作成する場合、まず一時的なディレクトリ（`_drafts/` 等）に作成してレビューを受け、承認後に正式な場所に移動・リネームする手順です。
+`.agent/` 配下の規約ファイル（`GEMINI.md`, `RULE.md` 等）および `.agent/workflows/` 配下のワークフローファイルを編集・作成する場合、直接変更を加えるのではなく、まず一時的なディレクトリ（`_drafts/`）にドラフトを作成してレビューを受け、承認後に正式な場所に移動する手順です。
+これは、プロジェクトの根幹に関わるルールやナレッジの誤編集・消失を防ぎ、変更内容を確実に監査可能にするためです。
 
 ## 手順 (Step-by-Step)
 
 ### 1. ドラフトディレクトリの準備
 
 - プロジェクトルートに `_drafts/` ディレクトリが存在するか確認し、なければ作成します。
-  ```bash
-  mkdir _drafts
-  ```
 
 ### 2. ドラフトファイルの作成
 
-- 作成したいファイルのファイル名（例: `Workflow-XXX.md`）で、`_drafts/` 配下にファイルを作成します。
-- `write_to_file` ツールを使用します。
+- **新規ファイル作成時**:
+  - 作成したいファイルのファイル名（例: `034.md`）で、`_drafts/` 配下にファイルを作成します。
+  - `write_to_file` ツールを使用します。
+- **既存ファイル編集時**:
+  - 元ファイルを `_drafts/` 配下にコピー（`cp`）します。
+  - コピー後、**即座に `git add` を実行**して、現在の状態をインデックスに登録（ベースライン固定）します。
+    - これにより、その後の編集がエディタや Git 上で明確な「差分（Diff）」として扱われ、レビューが容易になります。
 
 ### 3. ユーザーレビュー依頼
 
 - `notify_user` を使用して、作成したドラフトファイルのレビューを依頼します。
 - **PathsToReview** にドラフトファイルのパスを含めます。
+- **Diff の提示**: 既存ファイルの編集時は、`render_diffs` 等を用いて変更箇所を明確に提示してください。
 - メッセージ例:
-  > `[Workflow-XXX] タイトル` のドラフトを `_drafts/` に作成しました。内容をご確認ください。
+  > `[Workflow-023] タイトル` の改訂ドラフトを `_drafts/` に作成しました。`git add` により編集箇所の Diff を確認可能にしています。併せて `render_diffs` もご確認ください。
 
 ### 4. 正式配置への移動（承認後）
 
 - ユーザーの承認（y/OK）を得たら、ファイルを正式なディレクトリに移動します。
-- この際、`run_command` は **`SafeToAutoRun: false`** で実行し、ユーザーが実行コマンドを最終確認できるようにします。
+- **重要: ファイルの正式な配置場所を確認してください。**
+  - **規約 (Rules)**: `.agent/GEMINI.md`, `.agent/RULE.md` 等。
+  - **ワークフロー (Workflows)**: `.agent/workflows/XXX.md` （ファイル名は数字三桁）。
+- 移動には `git mv` を使用します。
   ```bash
-  # Git管理下のファイル移動を推奨
-  git mv _drafts/Workflow-XXX.md .agent/workflows/XXX.md
+  # 規約の例
+  git mv _drafts/GEMINI.md .agent/GEMINI.md
+  # ワークフローの例
+  git mv _drafts/023.md .agent/workflows/023.md
   ```
-- 必要に応じて、ファイル内のリンクや参照を修正します。
 
-### 5. ディレクトリの維持
+### 5. 後片付け
 
-- `_drafts/` ディレクトリは削除せず、次回の作業のために維持します。
-- 不要になったドラフトファイルのみ、必要に応じて削除またはアーカイブします。
+- 移動後、ファイル内の内部参照（リンク等）が正しいパスを指しているか確認します。
+- `_drafts/` 内の古い重複ファイルや一時ファイルは削除します。
 
 ## チェックリスト
 
-- [ ] 直接 `.agent/workflows` に作成せず、`_drafts/` を使用したか？
-- [ ] ユーザーにドラフトのレビューを依頼したか？
-- [ ] 承認後に正式な場所へ移動したか？
+- [ ] 正式な配置場所（`.agent/` 直下か `workflows/` 配下か）を確認したか？
+- [ ] 既存編集時、`git add` でベースラインを固定したか？
+- [ ] `_drafts/` を使用してレビューを依頼したか？
+- [ ] 承認後に正しいパスへ移動したか？
 
 ## 知見の継続的改善
 
