ワークフローかいぜん

--- a/.agent/workflows/018.md
+++ b/.agent/workflows/018.md
@@ -20,22 +20,32 @@ description: Strict Linter/Type Fix
 
 ## 手順 (Step-by-Step)
 
-### 1. エラー内容の取得と分析
+### 1. 自動修正の適用 (Auto-fix First)
+
+- エラー分析や手動修正を行う前に、まず **自動修正** を試みます。
+- `ultracite` (Biome wrapper) は、フォーマットや安全な修正を自動で行う機能を持っています。
+- 手順:
+  ```bash
+  npm run ultracite:fix
+  ```
+- これにより、大量のフォーマットエラーや単純な修正漏れが一括解消され、真に対処すべき論理エラーだけが残ります。また、エラー過多によるツールクラッシュを防ぐ効果もあります。
+- 実行後は再度 `npm run lint` (または `npm run ultracite:check`) を実行し、残存エラーを確認してください。
+
+### 2. エラー内容の取得と分析
 
 - **取得方法**:
-  - 基本的には `npm run typecheck` や `npm run lint` を実行し、そのツール出力を利用してエラー内容を把握します。
-  - 私（AI）はエディタ上のリアルタイムエラー（赤波線など）を直接読み取ることはできません。CLI で検出できない IDE 固有のエラーについては、ユーザーが手動で内容を伝えてください。
+  - `npm run typecheck` や `npm run lint` の出力を利用して把握します。
 - **分析**:
   - エラーメッセージを読み、なぜそのエラーが出ているかを理解します。
   - 単なる「型が合わない」だけでなく、ロジックの不整合の可能性を疑います。
 
-### 2. コード修正による解決 (Preferred)
+### 3. コード修正による解決 (Preferred)
 
 - **型定義の修正**: 必要であれば `interface` や `type` を修正します。
 - **ロジックの修正**: `if` チェックや Optional Chaining (`?.`)、Nullish Coalescing (`??`) を使用して、安全に値にアクセスします。
 - **Type Guard**: `isString(value)` のようなユーザー定義 Type Guard を活用します。
 
-### 3. レビュー依頼 (抑制が必要な場合)
+### 4. レビュー依頼 (抑制が必要な場合)
 
 - どうしても `biome-ignore` や `as` が必要と判断した場合は、ユーザーに以下を報告します。
   - エラー内容
@@ -45,6 +55,7 @@ description: Strict Linter/Type Fix
 
 ## チェックリスト
 
+- [ ] **最初に `npm run ultracite:fix` を実行したか？**
 - [ ] `biome-ignore` を勝手に追加していないか？
 - [ ] `as any` を使用していないか？
 - [ ] 修正後に `npm run typecheck` と `npm run lint` がパスすることを確認したか？
