--- a/.agent/workflows/024.md
+++ b/.agent/workflows/024.md
@@ -2,44 +2,56 @@
 description: 意図の補完と具体化 (Complete the Thought)
 ---
 
-# [Workflow-024] 意図の補完と具体化 (Complete the Thought)
+# [Workflow-024] 意図の自律的補完 (Autonomous Complementation / Complete the Thought)
 
 ## 概要
 
-ユーザーの優れた発想（0->1）を、AI の高速な具現化能力で完全な形（1->10）にするためのプロセスです。ユーザーの I/O（タイピング・説明）コストを最小化し、AI が文脈と知識でその間を埋めます。
+ユーザーの断片的な指示（0.1->1）を、AI の自律的な具現化能力で完全な手順（1->10）に展開するためのプロセスです。ユーザーの I/O（タイピング・説明）コストを最小化しつつ、AI が「背景・ルール・手順」を完璧に補完した計画を構築します。
 
 ## 背景 (Rationale)
 
-- **ユーザー**: 優れたアイデア（0->1）を持つが、それを表現する **I/O 速度（タイピング等）がボトルネック** となっている。
-- **AI**: 0->1 の発想には試行錯誤が必要だが、与えられた 1 のアイデアを具体的な実装・手順（1->10）に展開するのは驚異的に高速である。
-- **目的**: ユーザーは「考えの断片」を与え、AI がそこから派生して「10 の完全な形」を確認するステップを踏むことで、I/O の制約を超えて生産性を最大化する。
+- **ユーザー**: 優れた判断（1）を持つが、それを具現化するための詳細説明やタイピングがボトルネックとなっている。
+- **AI**: 0->1 の発想にはレビューが必要だが、与えられた 1 の意図を既存ルールやコードベースと照合し、具体的な手順「10」に展開するのは自律的に可能である。
+- **目的**: ユーザーが「考えの断片」を投げれば、AI が「完成された実行計画」を返し、ユーザーはそれをレビュー（承認）するだけで済む体制を確立する。
 
 ## 手順 (Step-by-Step)
 
 ### 1. 受信 (Input)
 
-- このワークフローを使用するようにという指示とともに送られてきたメッセージについて考えます
+- ユーザーからの短い指示、あるいは抽象的な要望を受け取ります。
 
-### 2. 派生と補完 (Extrapolate)
+### 2. 派生と自律的補完 (Autonomous Extrapolation)
 
-- 受け取った指示から、以下の要素を AI が推測・補完し、「完全な手順（The "10"）」を構築します。
-  - **背景意図**: なぜそれが必要か？（例：エディタの Diff 機能を使いたいから）
-  - **具体的コマンド**: 何を実行すべきか？（例：`cp` ではなく `git add`）
-  - **関連ルール**: 既存の `Workflow` や `GEMINI.md` との整合性。
-  - **エッジケース**: ファイルがない場合は？ 新規作成時は？
+- 受け取った指示から、以下の要素を AI が自律的に調査・推測し、「10 の完全な実行計画」を構築します。
+  - **背景・真意**: なぜその指示が必要か？（例：是正後にコミットしたい、リネームして整理したい等）
+  - **関連ファイルの特定**: 修正が必要なファイル、影響を受けるコンポーネント、参考にするべき既存コード。
+  - **適用ルールの探索**: 遵守すべき `GEMINI.md`, `RULE.md`, 各 `Workflow` の特定。
+  - **実行手順の多段階展開**: 安全な破壊的変更（cp -> git mv 等）や品質チェックを含む全ステップ。
 
-### 3. 確認 (Verify)
+### 3. 「10」の提示と合意形成 (Verify the Plan)
 
-- 実行に移る前に、構築した「10 の指示」をユーザーに提示し、合意形成を図ります。
-  - **メッセージ例**:
-    > 「ご指示の意図は〜いうことですね。具体的には以下の手順（1〜N）で実行するという理解で合っていますか？」
+- 実行に移る前に、構築した「10」を以下の **固定フォーマット** で提示し、承認（Atomic Approval）を得ます。
+
+> #### [補完された指示の要約]
+>
+> - **背景・意図**: （ユーザーの指示から補完された目的）
+> - **遵守ルール**: [GEMINI.md], [Workflow-XXX] など、今回適用する規約。
+> - **具体的アクション**:
+>   1. （実行するステップ 1）
+>   2. （実行するステップ 2 ...）
+> - **影響・副作用**: （ファイル変更、コマンド実行による影響）
 
 ### 4. 実行 (Execute)
 
-- ユーザーの「OK」「Go」などの承認を得てから、手順を実行します。
+- ユーザーの「y」などの承認を得次第、提示した手順に従って自律的に実行を開始します。
 
 ## チェックリスト
 
-- [ ] ユーザーの短い指示をそのまま鵜呑みにせず、背景や詳細を補完したか？
-- [ ] 補完した内容（1->10）をユーザーに提示し、承認を得たか？
-- [ ] 承認を得るまで実際の変更作業を待機したか？
+- [ ] 指示を表面通りに捉えず、背景や関連ファイルを自律的に調査したか？
+- [ ] 適用すべきルール（Workflow/GEMINI）を紐付けたか？
+- [ ] 派生させた「10 の手順」を固定フォーマットで提示したか？
+- [ ] **提示した後の最初のステップ** について、明示的に承認を得たか？
+
+## 知見の継続的改善
+
+補完の精度や、提示フォーマットの改善点があれば、本ドキュメントを更新してください。
