--- a/.agent/workflows/005.md
+++ b/.agent/workflows/005.md
@@ -28,6 +28,10 @@ Parent (定義) → Middle (通過) → Child (使用)
 
 ### ❌ Props Grouping が不要なケース
 
+> [!IMPORTANT] > **親から子へ直接渡す場合（Prop Drilling が発生しない場合）は、Props Grouping は不要です。**
+> 将来の拡張性を懸念して過剰に Grouping することは避けてください。直下の手渡しが最も可読性が高いためです。
+> **YAGNI 原則（You Aint Gonna Need It）** を遵守しましょう。
+
 **条件**: 親から直接子へ渡す場合（即座に使用される場合）
 
 ```
@@ -139,7 +143,7 @@ Parent → A → B → C (多段経由)
 
 1. Props の使用箇所を確認
 2. 中間コンポーネントが存在するか確認
-3. 存在しない場合は個別 Props に戻す
+3. **重要**: 親から直下の子への渡しの場合は、グループ化を解除して個別 Props に戻すことを検討する。
 
 ### 4. 型定義の整理
 
@@ -149,6 +153,7 @@ Parent → A → B → C (多段経由)
 ## チェックリスト
 
 - [ ] Props の伝播経路を確認したか？
+- [ ] **直下の子コンポーネントへの渡しでないか確認したか？（直下なら Grouping 不要）**
 - [ ] 中間コンポーネントが存在するか確認したか？
 - [ ] 判断基準に基づいて適切な形式を選択したか？
 - [ ] 不要な型定義を削除したか？
