--- a/.agent/workflows/000.md
+++ b/.agent/workflows/000.md
@@ -8,6 +8,9 @@ description: 普遍的な知見のルール化
 
 作業中に発見した「普遍的に有用な知見」や「繰り返し発生する修正パターン」を、プロジェクトのルール（`GEMINI.md`, `RULE.md`）およびワークフロー（`.agent/workflows/`）として定着させるためのプロセスです。AI 側からも能動的に提案し、プロジェクトの「脳」を自律的に強化し続けることを目的とします。
 
+- **知見の種 (Seed)**: 作業中に繰り返されるパターンを発見した場合、ワーキングディレクトリの `seeds.md` に **[Seed]** として記録してください。
+  - **重要**: `seeds.md` を新規作成または更新する際は、必ず冒頭に AI 向けの「ルールではない」旨の警告ヘッダー（後述する定型文）を付与または維持してください。
+
 ## 能動的提案のトリガー (AI's Duty)
 
 AI は以下の状況に遭遇した場合、自律的に本ワークフローの実行（新規作成または既存改定の提案）をユーザーに打診してください。
