--- a/.agent/workflows/028.md
+++ b/.agent/workflows/028.md
@@ -33,7 +33,7 @@ description: Workflows・ルールの最適化手順
 
 ### 3. ドラフト作成と相互参照の修正
 
-- 直接 `.agent/workflows/` のファイルを編集せず、まず `_drafts/` ディレクトリで変更・新規ファイルを作成する ([Workflow-023] 準拠)。
+- **[Workflow-023]** に完全に従い、直接ファイルを編集せず `_drafts/` で変更を行います。
 - ファイル間のリンク（`Workflow-XXX` 等の記述）に不整合が出ないよう、全体をチェックする。
 
 ### 4. ログへの詳細記録
