docs(workflow): consolidate type definition rules into 006, removed 001/017, and update RULE.md

--- a/.agent/workflows/006.md
+++ b/.agent/workflows/006.md
@@ -1,79 +1,91 @@
 ---
-description: スプレッド分割代入後の型定義の再配置
+description: 型定義の配置・整理ルール (Source of Truth)
 ---
 
-# [Workflow-006] スプレッド分割代入後の型定義の再配置
+# [Workflow-006] 型定義の配置・整理ルール (Type Definitions Placement)
 
 ## 概要
 
-[Workflow-002](./002.md)（スプレッド演算子による分割代入でのグループ化）を適用した後、親コンポーネントで定義されていた「グループ型」が親自身では使用されなくなることがあります。この場合、型定義を適切な子コンポーネント（そのドメインのハブとなるコンポーネント）へ移動し、コードのクリーンさとトレーサビリティを維持します。
+型定義の配置場所と、コンポーネント間での受け渡しに関するプロジェクトの Source of Truth（唯一の正解）です。
 
-> [!IMPORTANT]
-> このワークフローを適用する前に、必ず **[Workflow-005](./005.md)（Props Grouping の適用判断）** を確認してください。
-> **直接の親子かつ末端コンポーネント**（中間を経由しない）に対してこのワークフローを適用してはいけません。その場合は、グループ化自体を不採用とし、個別 Props に戻すべきです。
+## 配置の絶対原則 (Absolute Principles)
 
-## 課題
+1.  **定義場所の固定 (Invariant Location)**: 型定義は生成元（Hook）や再合成ハブ（親/Main コンポーネント）で定義し、下流へ移動させません。
+2.  **Parent -> Child (One-way Data Flow)**: 型は常に親から子へ流れます。下流で定義した型を上流が import する「逆流」は禁止です。
+3.  **IDE 追跡性の確保**: 定義場所を固定することで、IDE の「参照元検索」機能により、定義から利用箇所を即座に特定できる状態を維持します。
 
-スプレッド分割代入を適用すると、親コンポーネント内での型注釈（例: `const layerActions: LayerActions = { ... }`）が不要になります。しかし、その型は依然として子コンポーネントの Props 定義（`interface ChildProps { layerActions: LayerActions }`）で必要とされています。
+## 階層別配置マニュアル & コード例
 
-このとき、型定義が親コンポーネントに残ったままだと、以下の問題が発生します。
+| 階層 / 状況         | 推奨される配置場所（定義場所） | 理由・アクション                                                                                                                                                                          |
+| :------------------ | :----------------------------- | :---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| **1. Hook 定義**    | `useXxx.ts`                    | **`useXxxReturn` 型を定義・export** する。以後、ここを永続的な定義場所とする。                                                                                                            |
+| **2. 分解・再合成** | `Parent.tsx`                   | Hook から値を取り出し、**ここで Grouping 型 (`CombinedControl`) を定義・export** する。その際、型定義は永続的な定義場所からインポートした型を組み合わせたものとし、自前で型定義はしない。 |
+| **3. ハブ (利用)**  | `Child.tsx`                    | 定義場所 (`Parent`) から Grouping 型を import して利用する。**自前で型定義はしない。**                                                                                                    |
+| **4. 下流利用**     | `GrandChild` 以降              | さらに上流 (`Parent` または `Child` の中継) から型を import して利用する。                                                                                                                |
 
-1. **循環参照のリスク**: 子が親を `import` することになり、構成が複雑になる（特にその型がドメイン知識を多く含む場合）。
-2. **凝集度の低下**: 親が「自分が使わない型」を公開し続けることになる。
+```ts
+// 1. useActions.ts / useKeyState.ts (永続的な定義場所)
+export type useActionsReturn = { add: () => void };
+export type useKeyStateReturn = { isPressed: boolean };
 
-## 解決策
+// 2. Parent.tsx (中継)
+import { useActions } from "./useActions";
+import { useKeyState } from "./useKeyState";
 
-使用されなくなった型定義を、その Props を直接受ける**メインの子コンポーネント**（そのドメインにおいて中心的な役割を果たすコンポーネント）へ移動します。
+export interface CombinedControl {
+  add: useActionsReturn["add"];
+} & Pick<useKeyStateReturn, "isPressed">;
 
-### 手順
+export const Parent = () => {
+  const { add } = useActions();
+  const { isPressed } = useKeyState();
+  // Grouping: 型整合性を担保するため、一度オブジェクトとして合成する（実引数としてはバラで渡してもよい）
+  const control: CombinedControl = { add, isPressed };
 
-1. **移動対象の特定**: 親コンポーネント内で、もう使用されていない `export type` や `export interface` を特定する。
-2. **移動先の選定**: その型を Props として受け取り、かつそのドメインにおいて「中心」となる子コンポーネント（例: `KeyRemapSection.tsx`）を選定する。
-3. **コードの移動**: 親コンポーネントから型定義を切り出し、選定した子コンポーネントのファイルへ移動・`export` する。
-4. **インポートの修正**:
-   - **親コンポーネント**: 移動先の子コンポーネントから型をインポートして Props の型注釈に利用する。
-   - **他の子コンポーネント**: 同じ型を利用している「兄弟」コンポーネントがある場合は、定義を移動した子コンポーネントからインポートする。
+  return <Child add={add} isPressed={isPressed} />;
+};
 
-### Good Example
+// 3. Child.tsx (定義場所: 再合成)
+import type { CombinedControl } from "./Parent";
 
-**1. メインの子コンポーネント (`MainChild.tsx`)**
+// 定義元の型を Pick 等で加工して追従性を維持する
 
-```typescript
-export type LayerActions = Pick<UseLayerStateReturn, "setLayerId" | "addLayer">;
+export const Child = ({ add, isPressed }: CombinedControl) => {
+  // 再合成せず、そのまま必要なプロパティを下流へ渡す
+  return <GrandChild add={add} isPressed={isPressed} />;
+};
 
-interface MainChildProps {
-  layerActions: LayerActions;
-}
+// 4. GrandChild.tsx (利用のみ)
+import type { CombinedControl } from "./Child";
+
+export const GrandChild = ({ add, isPressed }: CombinedControl) => {
+  /_ 利用に専念 _/;
+};
 ```
 
-**2. 親コンポーネント (`Parent.tsx`)**
-
-```typescript
-import type { LayerActions } from "./MainChild";
-
-const { layers, ...layerActions } = useLayerState();
-// ...
-return <MainChild layerActions={layerActions} />;
+```mermaid
+graph TD
+    H1["useActions.ts<br/>(永続定義元)"] -->|取得| P
+    H2["useKeyState.ts<br/>(永続定義元)"] -->|取得| P["Parent.tsx<br/>(Grouping型定義/固定)"]
+    P -->|バラ渡し| C["Child.tsx<br/>(型をParentからimport)"]
+    C -->|引数通し| GC["GrandChild.tsx"]
+    GC -->|引数通し| GGC["GreatGrandChild.tsx"]
+    GGC -.->|IDEジャンプ/import| P
+    C -.->|IDEジャンプ/import| P
 ```
 
-**3. 他の兄弟コンポーネント (`SidePanel.tsx`)**
+## 検証プロトコル (Verification)
 
-```typescript
-import type { LayerActions } from "./MainChild";
+ファイルの移動やリネームが発生した場合は、以下の手順で整合性を確認してください。
 
-interface SidePanelProps {
-  layerActions: LayerActions;
-}
-```
-
-## チェックリスト
-
-- [ ] 親コンポーネントで直接使用されていない型を特定したか？
-- [ ] ドメインの中心となる子コンポーネントへ型定義を正しく移動したか？
-- [ ] すべての子・兄弟コンポーネントのインポート元を修正したか？
-- [ ] 親コンポーネントの不要な型定義/インポートを削除したか？
-- [ ] `npm run build` で型エラーが発生しないことを確認したか？
+1.  **実在確認**: `list_dir` を使用し、移動先のファイルが存在し、旧ファイルが削除されているか確認する。
+2.  **参照確認**: `grep_search` で旧パスの文字列が残存していないか確認する。
+3.  **型検査**: `npm run typecheck` を実行し、import パスの解決エラーがないか確認する。
 
 ## 知見の継続的改善 (Continuous Knowledge Improvement)
 
-このワークフローを使用する中で、新しい指示や改善点が見つかった場合は、必ずこのファイル (`.agent/workflows/006.md`) を更新・改善することを提案してください。
+このワークフローを使用する中で、より効率的な配置パターンや例外ケースを発見した場合は、本ファイルの更新・改善を提案してください。
+
+## 知見の種 (Seed) の記録
+
+上記に加え、作業中に普遍的な知見を発見した場合は、直ちに `seeds.md` (Working Dir) へ記録してください。
