docs(workflow): integrate seed management and verify invariant location rule in Batch C (003, 011, 018, 031)

--- a/.agent/workflows/003.md
+++ b/.agent/workflows/003.md
@@ -59,7 +59,12 @@ git diff --staged --stat
 # 意図したファイルだけが含まれているか最終確認
 ```
 
-### 4. コミット
+### 4. 知見の確認 (Seed Check)
+
+今回の作業で「将来役立つパターン」や「意外な挙動」は見つかりましたか？
+Yes なら、`git commit` する前に `seeds.md` に追記してください。
+
+### 5. コミット
 
 コミットを行う前にコミットメッセージをマークダウン形式でこれでよいか確認してください
 
@@ -91,6 +96,10 @@ git reset --soft HEAD~1
 # 直前のコミットを取り消し、変更をステージング状態に戻す
 # その後、正しいファイルだけ add し直してコミットする
 ```
+
+## 知見の種 (Seed) の記録
+
+コミットは作業の区切りです。ここまでの作業で得られた有用な知見やパターンがあれば、コミット前に `seeds.md` (Working Dir) へ記録してください（[Workflow-seed] 準拠）。
 
 ## 知見の継続的改善 (Continuous Knowledge Improvement)
 
