--- a/.agent/workflows/011.md
+++ b/.agent/workflows/011.md
@@ -105,9 +105,9 @@ git log --grep="refactor" --since="1 month ago" --oneline
 - **ルール化の検討**:
   - 同じミスを防ぐための Linter ルールや型定義の改善が可能か？
   - ドキュメントやガイドラインへの追記が必要か？
-- **Workflow-000 の実行**:
-  - 汎用的な知見が得られた場合は、[Workflow-000] を使用して新しい Fix ルールを作成するか、`GEMINI.md` を更新してください。
-  - 「個の気づき」を「チーム（プロジェクト）の知見」に昇華させます。
+- **Seeds への記録**:
+  - 汎用的な知見が得られた場合は、まず `seeds.md` に記録してください（[Workflow-seed] 準拠）。
+  - その後、[Workflow-000] に従ってルール化を提案してください。
 
 ## チェックリスト
 
