--- a/.agent/workflows/018.md
+++ b/.agent/workflows/018.md
@@ -60,6 +60,10 @@ description: Strict Linter/Type Fix
 - [ ] `as any` を使用していないか？
 - [ ] 修正後に `npm run typecheck` と `npm run lint` がパスすることを確認したか？
 
+## 知見の種 (Seed) の記録
+
+エラー修正を通じて得られた「頻出するエラーパターン」や「解決策の定石」は、`seeds.md` (Working Dir) へ記録してください（[Workflow-seed] 準拠）。
+
 ## 知見の継続的改善
 
 新しいエラーパターンや解決策が見つかった場合は、本ドキュメントを更新してください。
