--- a/.agent/workflows/031.md
+++ b/.agent/workflows/031.md
@@ -34,7 +34,8 @@ description: 厳格なコードレビューと修正計画策定の手順
 - **チェック項目 (Audit Checklist)**:
   - [ ] **Atomic Design**: 新規コンポーネントの配置（atoms, molecules, etc.）は適切か？
   - [ ] **Directory Structure**: 独自のディレクトリ（例: `manager/`）を勝手に作っていないか？
-  - [ ] **Props Grouping**: バケツリレーが発生していないか？ `[Workflow-001/005]` 違反はないか？
+  - [ ] **Props Grouping**: バケツリレーが発生していないか？ `[Workflow-005]` 違反はないか？
+  - [ ] **Type Definition Location**: 型定義は Parent/Hook で行われているか？ Child で独自の型定義や逆流 (`Workflow-006` 違反) はないか？
   - [ ] **Data/Config Separation**: 設定やデータ保存は `[Workflow-026]` に従っているか？
   - [ ] **Naming Convention**: ファイル名、変数名は命名規則に従っているか？
   - [ ] **Type Safety**: `any` や不適切な型アサーションはないか？
@@ -76,4 +77,8 @@ description: 厳格なコードレビューと修正計画策定の手順
 
 - [ ] `NewComponent.tsx` を `organisms/` へ移動。
 - [ ] Props を `UserConfig` 型にまとめて渡すようにリファクタリング。
+
+## 知見の種 (Seed) の記録
+
+レビューを通じて得られた「頻出するエラーパターン」や「設計上の注意点」は、`seeds.md` (Working Dir) へ記録してください（[Workflow-seed] 準拠）。
 ```
