docs: Batch F 修正適用 (ファイル移動ミスの修正)

--- a/.agent/workflows/005.md
+++ b/.agent/workflows/005.md
@@ -164,6 +164,10 @@ Parent → A → B → C (多段経由)
 - `.agent/GEMINI.md` の「設計思想 (Architecture Decisions)」セクション
 - `props_flow.md` の Props 伝播マトリクス
 
+## 知見の種 (Seed) の記録
+
+運用を通じて得られた「コーディングパターンの改善案」や「ルールの例外事例」は、`seeds.md` (Working Dir) へ記録してください（[Workflow-seed] 準拠）。
+
 ## 知見の継続的改善 (Continuous Knowledge Improvement)
 
 このワークフローを使用する中で、新しい指示や改善点が見つかった場合は、必ずこのファイル (`.agent/workflows/005.md`) を更新・改善することを提案してください。
