--- a/.agent/workflows/007.md
+++ b/.agent/workflows/007.md
@@ -77,6 +77,10 @@ export interface MappingActions {
 - [ ] 型定義が `UseLayerStateReturn` などのソースと同期されているか？
 - [ ] `npm run build` で型エラーが発生しないか？
 
+## 知見の種 (Seed) の記録
+
+運用を通じて得られた「コーディングパターンの改善案」や「ルールの例外事例」は、`seeds.md` (Working Dir) へ記録してください（[Workflow-seed] 準拠）。
+
 ## 知見の継続的改善 (Continuous Knowledge Improvement)
 
 このワークフローを使用する中で、新しい指示や改善点が見つかった場合は、必ずこのファイル (`.agent/workflows/007.md`) を更新・改善することを提案してください。
