--- a/.agent/workflows/014.md
+++ b/.agent/workflows/014.md
@@ -44,3 +44,7 @@ export const DOUBLE_CLICK_THRESHOLD_MS = 500;
 - [ ] 命名は `UPPER_SNAKE_CASE` か？
 - [ ] 適切な場所に配置したか？
 - [ ] コメントで意味を補足したか？
+
+## 知見の種 (Seed) の記録
+
+運用を通じて得られた「コーディングパターンの改善案」や「ルールの例外事例」は、`seeds.md` (Working Dir) へ記録してください（[Workflow-seed] 準拠）。
