--- a/.agent/workflows/015.md
+++ b/.agent/workflows/015.md
@@ -43,6 +43,10 @@ description: 設定項目の追加
 - [ ] `DEFAULT_REMAP_CONFIG` に初期値を追加したか？
 - [ ] 既存の設定ファイルを読み込んだ際にエラーにならないか（後方互換性）？
 
+## 知見の種 (Seed) の記録
+
+運用を通じて得られた「コーディングパターンの改善案」や「ルールの例外事例」は、`seeds.md` (Working Dir) へ記録してください（[Workflow-seed] 準拠）。
+
 ## 知見の継続的改善
 
 設定システムの構造が変わった場合は、本ドキュメントを更新してください。
