--- a/.agent/workflows/026.md
+++ b/.agent/workflows/026.md
@@ -80,3 +80,7 @@ class Storage {
 - [ ] 設定値とユーザーデータが混ざっていないか？
 - [ ] 巨大になりうる配列データは別ファイルに切り出されているか？
 - [ ] 保存処理は更新対象のファイルのみを触っているか？
+
+## 知見の種 (Seed) の記録
+
+運用を通じて得られた「コーディングパターンの改善案」や「ルールの例外事例」は、`seeds.md` (Working Dir) へ記録してください（[Workflow-seed] 準拠）。
